@@ -259,8 +259,8 @@ OKCancelHelp(window=top, helpSubject=NULL, model=FALSE,
 OutputWindow()
 packageAvailable(name)
 polrP()
-popCommand()
-popOutput()
+popCommand(keep=FALSE)
+popOutput(keep=FALSE)
 putDialog(dialog, values=NULL, resettable=TRUE)
 putRcmdr(x, value)
 radioButtons(window=top, name=stop("name not supplied"), 
@@ -396,6 +396,7 @@ commanderPosition()
   \item{initialSelection}{index of item initially selected, 0-base indexing.}
   \item{initialValue}{for a set of related radio buttons.}
   \item{initialValues}{for a set of related check boxes.}
+  \item{keep}{if \code{TRUE}, keep (rather than pop) last output or command in the stack; the default is \code{FALSE}.}
   \item{label}{label prefix for groups button after a selection is made.}
   \item{labels}{a vector of character strings to label a set of radio buttons or check boxes.}
   \item{lib.loc}{see documentation for \code{\link[utils]{data}}.}
@@ -497,7 +498,7 @@ commanderPosition()
   output produced by the command.
   The R Commander maintains a list of output objects, by default including the last
   10 outputs. \code{popOutput()} ``pops'' (i.e., returns and removes) the first entry
-  of the output stack. Note that, as a stack, the queue is LIFO (``last in, first out'').
+  of the output stack. Note that, as a stack, the queue is LIFO (``last in, first out''). Use \code{popOutput(keep=TRUE)} to access the last output but keep it in the stack.
   There is also a stack of commands, which is accessed similarly by \code{popCommand()}.
   Ocassionally, it's necessary to assign an object directly in the global environment, and
   this can be done with the \code{gassign} function. 
